[Fix] 修复API Task无法导出结果集问题;完善Swagger接口文档问题
